--- a/src/css/main.css
+++ b/src/css/main.css
@@ -49,6 +49,7 @@
     --color-red-500: #FD324A;
 
     --color-slate-40: #F4F6FA;
+    --color-slate-100: #F5F7FA;
     --color-slate-200: #E8E9F0;
     --color-slate-430: #8187AD;
 
