--- a/src/css/main.css
+++ b/src/css/main.css
@@ -41,12 +41,17 @@
     --color-purple-400: #AB67FE;
     --color-purple-500: #9A47FF;
 
+    --color-violet-600: #6928F6;
+
     --color-lime-50: #F8FFE5;
     --color-lime-400: #C2FE0E;
+    --color-lime-450: #A7F628;
     --color-lime-500: #A8E000;
     --color-lime-600: #9BCF00;
 
     --color-red-500: #FD324A;
+
+    --color-rose-500: #FD375B;
 
     --color-slate-40: #F4F6FA;
     --color-slate-100: #F5F7FA;
@@ -55,6 +60,8 @@
 
     --color-indigo-50: #E2E9FF;
     --color-indigo-100: #E5EBFF;
+
+    --color-cyan-400: #0CF2F2;
 
     --color-gray-400: #ABB1C4;
 
