--- a/src/templates/includes/footer.html
+++ b/src/templates/includes/footer.html
@@ -465,11 +465,11 @@
             </div>
 
             <!-- footer review container -->
-            <div class="footer-review-container relative rounded-2xl inset-ring-[1.5px] inset-ring-slate-40 overflow-hidden basis-1/2 lg:basis-[38.5%]">
+            <div class="footer-review-container relative rounded-2xl inset-ring-[1.5px] inset-ring-slate-40 basis-1/2 lg:basis-[38.5%]">
                 <!-- Начальный отзыв -->
                 <a href="#"
                    data-active="true"
-                   class="footer-review absolute inset-0 transition-all flex flex-col p-5 !no-underline hover:bg-slate-100 opacity-0 pointer-events-none scale-90 data-[active=true]:opacity-100 data-[active=true]:pointer-events-auto data-[active=true]:scale-100">
+                   class="footer-review rounded-2xl absolute inset-0 transition-all flex flex-col p-5 !no-underline hover:bg-slate-100 opacity-0 pointer-events-none scale-90 data-[active=true]:opacity-100 data-[active=true]:pointer-events-auto data-[active=true]:scale-100">
                     <div class="w-[109px] h-[40px] flex items-center">
                         <img src="https://dummyimage.com/200x60" alt="#" class="max-w-full max-h-full object-contain"/>
                     </div>
