fixed footer-review quote

--- a/src/templates/includes/footer.html
+++ b/src/templates/includes/footer.html
@@ -441,8 +441,9 @@
             <!-- footer case container -->
             <div class="footer-case-container relative rounded-3xl overflow-hidden basis-1/2 lg:basis-[61.5%]">
                 <!-- Начальный кейс -->
-                <div class="footer-case absolute inset-0 transition-all opacity-0 pointer-events-none data-[active=true]:opacity-100 data-[active=true]:pointer-events-auto"
-                     data-active="true">
+                <a href="#"
+                   data-active="true"
+                   class="footer-case absolute inset-0 transition-all opacity-0 pointer-events-none data-[active=true]:opacity-100 data-[active=true]:pointer-events-auto">
                     <img src="https://dummyimage.com/400x400" alt="#" class="absolute inset-0 w-full h-full object-cover">
 
                     <!-- Градиентная панель -->
@@ -451,7 +452,7 @@
                             <nobr><img class="b-cases__title-img" src="https://dummyimage.com/48x48" alt="МТС Банк"> МТС Банка</nobr>
                         </div>
                     </div>
-                </div>
+                </a>
 
                 <!-- Кнопка обновления -->
                 <button
