--- a/src/templates/includes/footer.html
+++ b/src/templates/includes/footer.html
@@ -368,8 +368,8 @@
     </div>
 </section>
 
-<footer class="footer py-12 font-sans tw-container">
-    <section class="footer-menu flex items-center justify-between mb-8">
+<footer class="footer py-12 font-sans w-[1408px] mx-auto">
+    <section class="footer-menu flex items-center justify-between mb-8 px-4">
         <div class="flex items-center gap-3">
             <div class="icon icon-logo size-11 text-blue-600"></div>
             <span class="text-blue-900 font-glina text-32 tracking-[-0.64px]">Продакшн</span>
@@ -386,8 +386,8 @@
         </nav>
 
         <div class="mr-4 flex gap-3.5">
-            <a href="#" class="flex items-center justify-center size-11 rounded-xl ring-[1.5px] ring-slate-200 text-blue-900"><i class="icon icon-telegram size-6"></i></a>
-            <a href="#" class="flex items-center justify-center size-11 rounded-xl ring-[1.5px] ring-slate-200 text-blue-900"><i class="icon icon-vk size-6"></i></a>
+            <a href="#" class="flex items-center justify-center size-11 rounded-xl ring-[1.5px] ring-slate-150 text-blue-900"><i class="icon icon-telegram size-6"></i></a>
+            <a href="#" class="flex items-center justify-center size-11 rounded-xl ring-[1.5px] ring-slate-150 text-blue-900"><i class="icon icon-vk size-6"></i></a>
         </div>
     </section>
 
@@ -470,7 +470,7 @@
                 <!-- Начальный отзыв -->
                 <a href="#"
                    data-active="true"
-                   class="footer-review rounded-2xl absolute inset-0 transition-all flex flex-col p-5 !no-underline hover:bg-slate-100 opacity-0 pointer-events-none scale-90 data-[active=true]:opacity-100 data-[active=true]:pointer-events-auto data-[active=true]:scale-100">
+                   class="footer-review rounded-2xl absolute inset-0 transition-all flex flex-col p-5 !no-underline hover:bg-slate-50 opacity-0 pointer-events-none scale-90 data-[active=true]:opacity-100 data-[active=true]:pointer-events-auto data-[active=true]:scale-100">
                     <div class="w-[109px] h-[40px] flex items-center">
                         <img src="https://dummyimage.com/200x60" alt="#" class="max-w-full max-h-full object-contain"/>
                     </div>
@@ -520,3 +520,31 @@
         </div>
     </section>
 </footer>
+<section class="footer-features flex flex-nowrap justify-between">
+    <div class="footer-features__item footer-features__item_first">
+        <span class="footer-features__label">дизайн</span>
+    </div>
+    <div class="footer-features__item footer-features__item_second">
+        <span class="footer-features__label">реклама</span>
+    </div>
+    <div class="footer-features__item footer-features__item_third">
+        <span class="footer-features__label">движ</span>
+    </div>
+</section>
+
+<div class="w-[1392px] mx-auto mb-3">
+    <div class="footer__word-logo mx-8"></div>
+
+    <div class="flex flex-nowrap items-center justify-between  text-gray-400 font-sans text-base font-medium  h-8 -mt-8 relative">
+        <div class="flex items-center flex-nowrap gap-4">
+            <span>© TOLKUNOV 2010-2025</span>
+            <div class="w-[2px] h-8 bg-slate-100"></div>
+            <a href="https://tolkunov.com/documents" class="text-gray-400 no-underline hover:text-gray-400">Документы</a>
+        </div>
+
+        <div class="flex items-center gap-1 cursor-pointer js-scroll-to-top">
+            <span>Лифт наверх</span>
+            <i class="icon icon-scroll-up size-4"></i>
+        </div>
+    </div>
+</div>
