--- a/src/css/main.css
+++ b/src/css/main.css
@@ -17,6 +17,7 @@
 @import "./chat-message.css";
 @import "./footer.css";
 @import "./footer-case.css";
+@import "./footer-features.css";
 
 @theme {
     --font-sans: 'Craftwork Sans', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
@@ -54,8 +55,9 @@
     --color-rose-500: #FD375B;
 
     --color-slate-40: #F4F6FA;
-    --color-slate-100: #F5F7FA;
-    --color-slate-200: #E8E9F0;
+    --color-slate-50: #F5F7FA;
+    --color-slate-100: #E9EDF5;
+    --color-slate-150: #E8E9F0;
     --color-slate-430: #8187AD;
 
     --color-indigo-50: #E2E9FF;
