--- a/src/templates/includes/footer.html
+++ b/src/templates/includes/footer.html
@@ -521,14 +521,80 @@
     </section>
 </footer>
 <section class="footer-features flex flex-nowrap justify-between">
-    <div class="footer-features__item footer-features__item_first">
+    <div class="group relative footer-features__item footer-features__item_first">
         <span class="footer-features__label">дизайн</span>
+
+        <div class="flex flex-col items-center gap-4 z-10 absolute top-[calc(100%+20px)] w-full  text-blue-950 text-base font-bold leading-5  transition-all scale-90 opacity-0 group-hover:scale-100 group-hover:opacity-100">
+            <div class="absolute inset-0 rounded-full bg-white blur-xl z-[-1]"></div>
+            <div class="inset-ring-2 inset-ring-zinc-200 p-3 bg-white rounded-xl flex gap-3">
+                <div class="size-5 relative">
+                    <i class="icon footer-features__check_1 absolute left-0 bottom-0 w-full h-8"></i>
+                </div>
+                <span>Двигаем пиксели</span>
+            </div>
+            <div class="inset-ring-2 inset-ring-zinc-200 p-3 bg-white rounded-xl flex gap-3">
+                <div class="size-5 relative">
+                    <i class="icon footer-features__check_1 absolute left-0 bottom-0 w-full h-8"></i>
+                </div>
+                <span>Собираем кейвижуалы</span>
+            </div>
+            <div class="inset-ring-2 inset-ring-zinc-200 p-3 bg-white rounded-xl flex gap-3">
+                <div class="size-5 relative">
+                    <i class="icon footer-features__check_1 absolute left-0 bottom-0 w-full h-8"></i>
+                </div>
+                <span>Наводим красоту</span>
+            </div>
+        </div>
     </div>
-    <div class="footer-features__item footer-features__item_second">
+    <div class="group relative footer-features__item footer-features__item_second">
         <span class="footer-features__label">реклама</span>
+
+        <div class="flex flex-col items-center gap-4 z-10 absolute top-[calc(100%+40px)] w-full  text-blue-950 text-base font-bold leading-5  transition-all scale-90 opacity-0 group-hover:scale-100 group-hover:opacity-100">
+            <div class="absolute inset-0 rounded-full bg-white blur-xl z-[-1]"></div>
+            <div class="inset-ring-2 inset-ring-zinc-200 p-3 bg-white rounded-xl flex gap-3">
+                <div class="size-5 relative">
+                    <i class="icon footer-features__check_2 absolute left-0 bottom-0 w-full h-8"></i>
+                </div>
+                <span>Проходим модерацию на всех площадках</span>
+            </div>
+            <div class="inset-ring-2 inset-ring-zinc-200 p-3 bg-white rounded-xl flex gap-3">
+                <div class="size-5 relative">
+                    <i class="icon footer-features__check_2 absolute left-0 bottom-0 w-full h-8"></i>
+                </div>
+                <span>Впихиваем невпихуемое в 320x50 px и в 150 Кб</span>
+            </div>
+            <div class="inset-ring-2 inset-ring-zinc-200 p-3 bg-white rounded-xl flex gap-3">
+                <div class="size-5 relative">
+                    <i class="icon footer-features__check_2 absolute left-0 bottom-0 w-full h-8"></i>
+                </div>
+                <span>Укрощаем лигалы, отступы и переменные</span>
+            </div>
+        </div>
     </div>
-    <div class="footer-features__item footer-features__item_third">
+    <div class="group relative footer-features__item footer-features__item_third">
         <span class="footer-features__label">движ</span>
+
+        <div class="flex flex-col items-center gap-4 z-10 absolute top-[calc(100%+45px)] w-[407px] -left-[66px]  text-blue-950 text-base font-bold leading-5  transition-all scale-90 opacity-0 group-hover:scale-100 group-hover:opacity-100">
+            <div class="absolute inset-0 rounded-full bg-white blur-xl z-[-1]"></div>
+            <div class="inset-ring-2 inset-ring-zinc-200 p-3 bg-white rounded-xl flex gap-3">
+                <div class="size-5 relative">
+                    <i class="icon footer-features__check_3 absolute left-0 bottom-0 w-full h-8"></i>
+                </div>
+                <span>Анимируем и делаем моушн</span>
+            </div>
+            <div class="inset-ring-2 inset-ring-zinc-200 p-3 bg-white rounded-xl flex gap-3">
+                <div class="size-5 relative">
+                    <i class="icon footer-features__check_3 absolute left-0 bottom-0 w-full h-8"></i>
+                </div>
+                <span>Ресайзим под все площадки</span>
+            </div>
+            <div class="inset-ring-2 inset-ring-zinc-200 p-3 bg-white rounded-xl flex gap-3">
+                <div class="size-5 relative">
+                    <i class="icon footer-features__check_3 absolute left-0 bottom-0 w-full h-8"></i>
+                </div>
+                <span>Принимаем, отвечаем и правим быстро</span>
+            </div>
+        </div>
     </div>
 </section>
 
