--- a/src/templates/includes/footer.html
+++ b/src/templates/includes/footer.html
@@ -576,13 +576,13 @@
 
         <div class="flex flex-col items-center gap-4 z-10 absolute top-[calc(100%+45px)] w-[407px] -left-[66px]  text-blue-950 text-base font-bold leading-5  transition-all scale-90 opacity-0 group-hover:scale-100 group-hover:opacity-100">
             <div class="absolute inset-0 rounded-full bg-white blur-xl z-[-1]"></div>
-            <div class="inset-ring-2 inset-ring-zinc-200 p-3 bg-white rounded-xl flex gap-3">
+            <div class="inset-ring-2 inset-ring-zinc-200 p-3 bg-white rounded-xl flex gap-3 -rotate-1">
                 <div class="size-5 relative">
                     <i class="icon footer-features__check_3 absolute left-0 bottom-0 w-full h-8"></i>
                 </div>
                 <span>Анимируем и делаем моушн</span>
             </div>
-            <div class="inset-ring-2 inset-ring-zinc-200 p-3 bg-white rounded-xl flex gap-3">
+            <div class="inset-ring-2 inset-ring-zinc-200 p-3 bg-white rounded-xl flex gap-3 -rotate-1">
                 <div class="size-5 relative">
                     <i class="icon footer-features__check_3 absolute left-0 bottom-0 w-full h-8"></i>
                 </div>
