--- a/src/css/main.css
+++ b/src/css/main.css
@@ -33,6 +33,7 @@
 
     --text-32: 2rem;
 
+    --color-blue-50: #F1F4FE;
     --color-blue-600: #2856F6;
     --color-blue-620: #2E55DB;
     --color-blue-680: #2146C4;
