--- a/src/templates/includes/footer.html
+++ b/src/templates/includes/footer.html
@@ -98,26 +98,34 @@
                     src="/assets/img/contact-block/dima_440.webp"
                     srcset="/assets/img/contact-block/dima_440_x2.webp 2x"
                     alt="Описание изображения"
-                    class="w-full h-full object-contain object-left"/>
+                    class="w-full h-full object-cover object-left"/>
         </picture>
 
         <!-- Левая часть -->
-        <div class="flex-1 p-7 flex flex-col justify-between">
+        <div class="flex-1 p-7 flex flex-col justify-between z-1">
             <div class="font-serif space-y-2 w-[525px]">
                 <div class="text-white/60 text-2xl font-semibold">Спасибо, что долистали до конца</div>
                 <div class="text-white text-[3.5rem]/17 font-bold">Самое время обсудить проект</div>
             </div>
 
-            <div class="flex flex-col items-start gap-3 max-w-[273px]">
-                <div class="chat-message chat-message-1 chat-message_default">Привет!</div>
-                <div class="chat-message chat-message-2 chat-message_default">Я Дима, фаундер<br>агентства TOLKUNOV</div>
-                <div class="chat-message chat-message-3 chat-message_cta">
-                    <div class="text-blue-900 text-base font-bold tracking-[0.16px]">Отвечу на все вопросы и&nbsp;посчитаю смету</div>
+            <div class="flex">
+                <div class="flex flex-col items-start gap-3 w-[273px]">
+                    <div class="chat-message chat-message-1 chat-message_default">Привет!</div>
+                    <div class="chat-message chat-message-2 chat-message_default">Я Дима, фаундер<br>агентства TOLKUNOV</div>
+                    <div class="chat-message chat-message-3 chat-message_cta">
+                        <div class="text-blue-900 text-base font-bold tracking-[0.16px]">Отвечу на все вопросы и&nbsp;посчитаю смету</div>
 
-                    <a href="https://t.me/tolkunovdb" target="_blank"
-                       class="bg-blue-600 py-3 pl-4 pr-6 rounded-20 hover:bg-blue-620 active:bg-blue-680 transition-colors  inline-flex items-center gap-2 font-glina text-2xl/6 font-thin !text-white !no-underline">
-                        <span class="icon icon-telegram size-7"></span>
-                        <span>Написать</span>
+                        <a href="https://t.me/tolkunovdb" target="_blank"
+                           class="bg-blue-600 py-3 pl-4 pr-6 rounded-20 hover:bg-blue-620 active:bg-blue-680 transition-colors  inline-flex items-center gap-2 font-glina text-2xl/6 font-thin !text-white !no-underline">
+                            <span class="icon icon-telegram size-7"></span>
+                            <span>Написать</span>
+                        </a>
+                    </div>
+                </div>
+                <div class="flex flex-1 items-end justify-center">
+                    <a href="#" class="contact-block__play h-16 rotate-8 text-blue-600 hover:text-blue-620" data-modal="video" data-target="#modal-video-dima" data-video="https://cdn.plyr.io/static/BigBuckBunny.mp4">
+                        <i class="icon icon-play-short size-7"></i>
+                        <span>42 сек</span>
                     </a>
                 </div>
             </div>
@@ -279,25 +287,33 @@
                     src="/assets/img/contact-block/tanya_440.webp"
                     srcset="/assets/img/contact-block/tanya_440_x2.webp 2x"
                     alt="Описание изображения"
-                    class="w-full h-full object-contain object-left"/>
+                    class="w-full h-full object-cover object-left"/>
         </picture>
         <!-- Левая часть -->
-        <div class="flex-1 p-7 flex flex-col justify-between">
+        <div class="flex-1 p-7 flex flex-col justify-between z-1">
             <div class="font-serif space-y-2 w-[525px]">
                 <div class="text-white/60 text-2xl font-semibold">Спасибо, что долистали до конца</div>
                 <div class="text-white text-[3.5rem]/17 font-bold">Как насчёт кросс-промо?</div>
             </div>
 
-            <div class="flex flex-col items-start gap-3 max-w-[273px]">
-                <div class="chat-message chat-message-1 chat-message_default">Привет!</div>
-                <div class="chat-message chat-message-2 chat-message_default">Я Таня, отвечаю за пиар<br>в TOLKUNOV</div>
-                <div class="chat-message chat-message-3 chat-message_cta">
-                    <div class="text-purple-900 text-base font-bold tracking-[0.16px]">Обсудим сотрудничество?</div>
+            <div class="flex">
+                <div class="flex flex-col items-start gap-3 w-[273px]">
+                    <div class="chat-message chat-message-1 chat-message_default">Привет!</div>
+                    <div class="chat-message chat-message-2 chat-message_default">Я Таня, отвечаю за пиар<br>в TOLKUNOV</div>
+                    <div class="chat-message chat-message-3 chat-message_cta">
+                        <div class="text-purple-900 text-base font-bold tracking-[0.16px]">Обсудим сотрудничество?</div>
 
-                    <a href="https://t.me/firsaness" target="_blank"
-                       class="bg-purple-400 py-3 pl-4 pr-6 rounded-20 hover:bg-purple-300 active:bg-purple-500 transition-colors inline-flex items-center gap-2 font-glina text-2xl/6 font-thin !text-white !no-underline">
-                        <span class="icon icon-telegram size-7"></span>
-                        <span>Написать</span>
+                        <a href="https://t.me/firsaness" target="_blank"
+                           class="bg-purple-400 py-3 pl-4 pr-6 rounded-20 hover:bg-purple-300 active:bg-purple-500 transition-colors inline-flex items-center gap-2 font-glina text-2xl/6 font-thin !text-white !no-underline">
+                            <span class="icon icon-telegram size-7"></span>
+                            <span>Написать</span>
+                        </a>
+                    </div>
+                </div>
+                <div class="flex flex-1 items-end justify-center">
+                    <a href="#" class="contact-block__play h-16 rotate-8 text-purple-400 hover:text-purple-300" data-modal="video" data-target="#modal-video-tanya" data-video="https://cdn.plyr.io/static/BigBuckBunny.mp4">
+                        <i class="icon icon-play-short size-7"></i>
+                        <span>25 сек</span>
                     </a>
                 </div>
             </div>
@@ -414,25 +430,33 @@
                     src="/assets/img/contact-block/olya_440.webp"
                     srcset="/assets/img/contact-block/olya_440_x2.webp 2x"
                     alt="Описание изображения"
-                    class="w-full h-full object-contain object-left"/>
+                    class="w-full h-full object-cover object-left"/>
         </picture>
         <!-- Левая часть -->
-        <div class="flex-1 p-7 flex flex-col justify-between">
-            <div class="font-serif space-y-2 w-[525px]">
+        <div class="flex-1 p-7 flex flex-col justify-between z-1">
+            <div class="font-serif space-y-2 w-[466px]">
                 <div class="text-blue-900/60 text-2xl font-semibold">Спасибо, что долистали до конца</div>
                 <div class="text-blue-900 text-[3.5rem]/17 font-bold">В поиске крутых коллег?</div>
             </div>
 
-            <div class="flex flex-col items-start gap-3 max-w-[273px]">
-                <div class="chat-message chat-message-1 chat-message_default">Привет!</div>
-                <div class="chat-message chat-message-2 chat-message_default">Я Оля, отвечаю за кадры<br>в TOLKUNOV</div>
-                <div class="chat-message chat-message-3 chat-message_cta">
-                    <div class="text-blue-900 text-base font-bold tracking-[0.16px]">Хочешь работать у нас? Присылай своё резюме</div>
+            <div class="flex">
+                <div class="flex flex-col items-start gap-3 w-[273px]">
+                    <div class="chat-message chat-message-1 chat-message_default">Привет!</div>
+                    <div class="chat-message chat-message-2 chat-message_default">Я Оля, отвечаю за кадры<br>в TOLKUNOV</div>
+                    <div class="chat-message chat-message-3 chat-message_cta">
+                        <div class="text-blue-900 text-base font-bold tracking-[0.16px]">Хочешь работать у нас? Присылай своё резюме</div>
 
-                    <a href="https://t.me/cancolya" target="_blank"
-                       class="bg-lime-500 py-3 pl-4 pr-6 rounded-20 hover:bg-lime-400 active:bg-lime-600 transition-colors inline-flex items-center gap-2 font-glina text-2xl/6 font-thin !text-blue-900 !no-underline">
-                        <span class="icon icon-telegram size-7"></span>
-                        <span>Написать</span>
+                        <a href="https://t.me/cancolya" target="_blank"
+                           class="bg-lime-500 py-3 pl-4 pr-6 rounded-20 hover:bg-lime-400 active:bg-lime-600 transition-colors inline-flex items-center gap-2 font-glina text-2xl/6 font-thin !text-blue-900 !no-underline">
+                            <span class="icon icon-telegram size-7"></span>
+                            <span>Написать</span>
+                        </a>
+                    </div>
+                </div>
+                <div class="flex flex-1 items-end justify-center">
+                    <a href="#" class="contact-block__play h-16 rotate-8 text-lime-500 hover:text-lime-400" data-modal="video" data-target="#modal-video-olya" data-video="https://cdn.plyr.io/static/BigBuckBunny.mp4">
+                        <i class="icon icon-play-short size-7"></i>
+                        <span>20 сек</span>
                     </a>
                 </div>
             </div>
