--- a/src/css/main.css
+++ b/src/css/main.css
@@ -19,6 +19,7 @@
 @import "./footer.css";
 @import "./footer-case.css";
 @import "./footer-features.css";
+@import "./video.css";
 
 @theme {
     --font-sans: 'Craftwork Sans', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
@@ -75,6 +76,7 @@
     --radius-10: 10px;
     --radius-20: 20px;
     --radius-28: 28px;
+    --radius-5xl: 2.5rem;
 
     --default-transition-duration: .3s;
 
