--- a/src/templates/includes/footer.html
+++ b/src/templates/includes/footer.html
@@ -123,7 +123,7 @@
                     </div>
                 </div>
                 <div class="flex flex-1 items-end justify-center">
-                    <a href="#" class="contact-block__play h-16 rotate-8 text-blue-600 hover:text-blue-620" data-modal="video" data-target="#modal-video-dima" data-video="https://cdn.plyr.io/static/BigBuckBunny.mp4">
+                    <a href="#" class="contact-block__play h-16 rotate-8 text-blue-600 hover:text-blue-620" data-modal="video" data-target="#modal-video-dima" data-video="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-720p.mp4">
                         <i class="icon icon-play-short size-7"></i>
                         <span>42 сек</span>
                     </a>
@@ -311,7 +311,7 @@
                     </div>
                 </div>
                 <div class="flex flex-1 items-end justify-center">
-                    <a href="#" class="contact-block__play h-16 rotate-8 text-purple-400 hover:text-purple-300" data-modal="video" data-target="#modal-video-tanya" data-video="https://cdn.plyr.io/static/BigBuckBunny.mp4">
+                    <a href="#" class="contact-block__play h-16 rotate-8 text-purple-400 hover:text-purple-300" data-modal="video" data-target="#modal-video-tanya" data-video="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-720p.mp4">
                         <i class="icon icon-play-short size-7"></i>
                         <span>25 сек</span>
                     </a>
@@ -454,7 +454,7 @@
                     </div>
                 </div>
                 <div class="flex flex-1 items-end justify-center">
-                    <a href="#" class="contact-block__play h-16 rotate-8 text-lime-500 hover:text-lime-400" data-modal="video" data-target="#modal-video-olya" data-video="https://cdn.plyr.io/static/BigBuckBunny.mp4">
+                    <a href="#" class="contact-block__play h-16 rotate-8 text-lime-500 hover:text-lime-400" data-modal="video" data-target="#modal-video-olya" data-video="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-720p.mp4">
                         <i class="icon icon-play-short size-7"></i>
                         <span>20 сек</span>
                     </a>
@@ -522,6 +522,48 @@
                     </button>
                 </div>
             </form>
+        </div>
+    </div>
+</section>
+
+<!-- Video modals (overlay containers placed right after contacts) -->
+<section aria-hidden="true">
+    <!-- Dima video modal -->
+    <div id="modal-video-dima" data-open="false" class="video-modal video-modal_dima">
+        <div class="video-modal__backdrop absolute inset-0"></div>
+        <div class="video-modal__dialog relative rounded-5xl overflow-hidden aspect-video">
+            <button type="button" class="video-modal__close" data-close aria-label="Закрыть">
+                <i class="icon icon-close size-8"></i>
+            </button>
+            <div class="video-modal__body rounded-5xl overflow-hidden w-full h-full">
+                <video class="video-modal__player plyr-js" playsinline controls></video>
+            </div>
+        </div>
+    </div>
+
+    <!-- Tanya video modal -->
+    <div id="modal-video-tanya" data-open="false" class="video-modal video-modal_tanya">
+        <div class="video-modal__backdrop absolute inset-0"></div>
+        <div class="video-modal__dialog relative rounded-5xl overflow-hidden aspect-video">
+            <button type="button" class="video-modal__close" data-close aria-label="Закрыть">
+                <i class="icon icon-close size-8"></i>
+            </button>
+            <div class="video-modal__body rounded-5xl overflow-hidden w-full h-full">
+                <video class="video-modal__player plyr-js" playsinline controls></video>
+            </div>
+        </div>
+    </div>
+
+    <!-- Olya video modal -->
+    <div id="modal-video-olya" data-open="false" class="video-modal video-modal_olya">
+        <div class="video-modal__backdrop absolute inset-0"></div>
+        <div class="video-modal__dialog relative rounded-5xl overflow-hidden aspect-video">
+            <button type="button" class="video-modal__close" data-close aria-label="Закрыть">
+                <i class="icon icon-close size-8"></i>
+            </button>
+            <div class="video-modal__body rounded-5xl overflow-hidden w-full h-full">
+                <video class="video-modal__player plyr-js" playsinline controls></video>
+            </div>
         </div>
     </div>
 </section>
