done __play buttons

--- a/src/templates/includes/footer.html
+++ b/src/templates/includes/footer.html
@@ -123,7 +123,7 @@
                     </div>
                 </div>
                 <div class="flex flex-1 items-end justify-center">
-                    <a href="#" class="contact-block__play h-16 rotate-8 text-blue-600 hover:text-blue-620" data-modal="video" data-target="#modal-video-dima" data-video="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-720p.mp4">
+                    <a href="#" class="contact-block__play h-16 rotate-8 text-blue-600 hover:text-blue-620 hover:bg-blue-50 hover:after:bg-blue-50" data-modal="video" data-target="#modal-video-dima" data-video="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-720p.mp4">
                         <i class="icon icon-play-short size-7"></i>
                         <span>42 сек</span>
                     </a>
@@ -311,7 +311,7 @@
                     </div>
                 </div>
                 <div class="flex flex-1 items-end justify-center">
-                    <a href="#" class="contact-block__play h-16 rotate-8 text-purple-400 hover:text-purple-300" data-modal="video" data-target="#modal-video-tanya" data-video="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-720p.mp4">
+                    <a href="#" class="contact-block__play h-16 rotate-8 text-purple-400 hover:text-purple-600 hover:bg-purple-50 hover:after:bg-purple-50" data-modal="video" data-target="#modal-video-tanya" data-video="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-720p.mp4">
                         <i class="icon icon-play-short size-7"></i>
                         <span>25 сек</span>
                     </a>
@@ -375,7 +375,7 @@
 
                     <!-- Кнопка "Отправить" (состояние: завершено) -->
                     <button type="submit"
-                            class="flex items-center justify-center gap-2.5 px-6 py-4 rounded-20 bg-purple-50 transition-colors text-purple-400 font-glina text-2xl/6 border-none mt-auto cursor-default"
+                            class="flex items-center justify-center gap-2.5 px-6 py-4 rounded-20 bg-sky-100 transition-colors text-purple-400 font-glina text-2xl/6 border-none mt-auto cursor-default"
                             disabled>
                         <i class="icon icon-checked size-5"></i>
                         <span>Отправлено</span>
@@ -454,7 +454,7 @@
                     </div>
                 </div>
                 <div class="flex flex-1 items-end justify-center">
-                    <a href="#" class="contact-block__play h-16 rotate-8 text-lime-500 hover:text-lime-400" data-modal="video" data-target="#modal-video-olya" data-video="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-720p.mp4">
+                    <a href="#" class="contact-block__play h-16 rotate-8 text-lime-500 hover:text-lime-520 hover:bg-amber-50 hover:after:bg-amber-50" data-modal="video" data-target="#modal-video-olya" data-video="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-720p.mp4">
                         <i class="icon icon-play-short size-7"></i>
                         <span>20 сек</span>
                     </a>
