--- a/src/css/main.css
+++ b/src/css/main.css
@@ -41,17 +41,23 @@
     --color-blue-900: #161F6A;
     --color-blue-950: #161C4A;
 
-    --color-purple-50: #F6EFFF;
+    --color-purple-50: #F8F4FE;
     --color-purple-300: #C08DFE;
     --color-purple-400: #AB67FE;
     --color-purple-500: #9A47FF;
+    --color-purple-600: #9640FF;
+
+    --color-sky-100: #F6EFFF;
 
     --color-violet-600: #6928F6;
+
+    --color-amber-50: #F9FDEE;
 
     --color-lime-50: #F8FFE5;
     --color-lime-400: #C2FE0E;
     --color-lime-450: #A7F628;
     --color-lime-500: #A8E000;
+    --color-lime-520: #95C601;
     --color-lime-600: #9BCF00;
 
     --color-red-500: #FD324A;
